# januspy

./: .gitignore  .gitmodules  DOCUMENTATION.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
januspy/: __init__.py  __main__.py  audio.py  cli.py  engine.py  integrity.py  psets.py  receiver.py  server.py
januspy/web/: index.html
tests/: test_januspy.py
